--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,14 @@
 name: CI
 on:
   push:
-    branches: [ "**" ]
+    branches: ["**"]
+
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      packages: write
+      packages: write   # ← viktigt för GHCR
     steps:
       - uses: actions/checkout@v4
 
@@ -15,11 +16,13 @@ jobs:
         run: echo "TAG=${GITHUB_SHA::7}" >> $GITHUB_ENV
 
       - uses: docker/setup-buildx-action@v3
-      - uses: docker/login-action@v3
+
+      - name: Login to GHCR
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_TOKEN }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}   # ← använd inbyggda token
 
       - name: Build & Push vote
         run: docker buildx build vote   -t ghcr.io/maskinen/vote:${TAG}   --push
@@ -33,12 +36,11 @@ jobs:
           mkdir -p dist
           cat > dist/values-ci.yaml <<EOF
           image:
-            registry: registry: ghcr.io/maskinen
+            registry: ghcr.io/maskinen
             tag: ${TAG}
           EOF
 
-      - name: Upload helm values artifact
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
         with:
           name: values-ci
           path: dist/values-ci.yaml
