--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,24 +9,40 @@ jobs:
   deploy:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
 
-      - name: Download values from CI
-        uses: actions/download-artifact@v4
-        with: { name: values-ci, path: dist }
+      - name: Derive image tag from CI head_sha
+        id: tag
+        run: |
+          SHA="${{ github.event.workflow_run.head_sha }}"
+          echo "TAG=${SHA:0:7}" >> $GITHUB_ENV
+          echo "Using TAG=${SHA:0:7}"
 
       - name: Setup kubectl
         uses: azure/setup-kubectl@v4
-        with: { version: 'v1.30.0' }
+        with:
+          version: 'v1.30.0'
 
-      - name: Kubeconfig
+      - name: Setup helm
+        uses: azure/setup-helm@v4
+
+      - name: Write inline values (no artifacts)
+        run: |
+          mkdir -p dist
+          cat > dist/values-ci.yaml <<EOF
+          image:
+            registry: ghcr.io/maskinen
+            tag: ${TAG}
+          EOF
+
+      - name: Configure kubeconfig
         run: |
           echo "${KUBE_CONFIG}" | base64 -d > $HOME/.kube/config
         env:
           KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
 
-      - name: Helm install/upgrade
-        uses: azure/setup-helm@v4
-      - run: |
+      - name: Helm upgrade/install
+        run: |
           helm upgrade --install voting ./helm -n voting --create-namespace -f dist/values-ci.yaml
