--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,25 +8,12 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      packages: write   # ← viktigt för GHCR
+      packages: write   # <-- MÅSTE finnas för GHCR
     steps:
       - uses: actions/checkout@v4
 
       - name: Set image tag
         run: echo "TAG=${GITHUB_SHA::7}" >> $GITHUB_ENV
-        
-      - name: Build & Push vote
-        run: |
-         docker buildx build vote   -t ghcr.io/maskinen/vote:${TAG}   -t ghcr.io/maskinen/vote:latest   --push
-         
-      - name:  Build & Push worker
-        run: |
-         docker buildx build worker -t ghcr.io/maskinen/worker:${TAG} -t ghcr.io/maskinen/worker:latest --push
-         
-      - name:  Build & Push result
-        run: |
-         docker buildx build result -t ghcr.io/maskinen/result:${TAG} -t ghcr.io/maskinen/result:latest --push
-       
 
       - uses: docker/setup-buildx-action@v3
 
@@ -34,19 +21,15 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}   # ← använd inbyggda token
+          username: ${{ github.actor }}          # ex. "maskinen"
+          password: ${{ secrets.GITHUB_TOKEN }}  # inbyggd token
 
-      - name: Write values override
+      - name: Build & Push vote
         run: |
-          mkdir -p dist
-          cat > dist/values-ci.yaml <<EOF
-          image:
-            registry: ghcr.io/maskinen
-            tag: ${TAG}
-          EOF
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: values-ci
-          path: dist/values-ci.yaml
+          docker buildx build vote   -t ghcr.io/maskinen/vote:${TAG}   -t ghcr.io/maskinen/vote:latest   --push
+      - name: Build & Push worker
+        run: |
+          docker buildx build worker -t ghcr.io/maskinen/worker:${TAG} -t ghcr.io/maskinen/worker:latest --push
+      - name: Build & Push result
+        run: |
+          docker buildx build result -t ghcr.io/maskinen/result:${TAG} -t ghcr.io/maskinen/result:latest --push
