--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -39,9 +39,9 @@ jobs:
 
       - name: Configure kubeconfig
         run: |
-          echo "${KUBE_CONFIG}" | base64 -d > $HOME/.kube/config
-        env:
-          KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
+          mkdir -p "$HOME/.kube
+          echo "${KUBE_CONFIG}" | base64 -d | tr -d '\r' > "$HOME/.kube/config"
+          chmod 600 "$HOME/.kube/config"
 
       - name: Helm upgrade/install
         run: |
