--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -39,9 +39,16 @@ jobs:
 
       - name: Configure kubeconfig
         run: |
-          mkdir -p "$HOME/.kube
+          mkdir -p "$HOME/.kube"
           echo "${KUBE_CONFIG}" | base64 -d | tr -d '\r' > "$HOME/.kube/config"
           chmod 600 "$HOME/.kube/config"
+          
+      - name: Sanity check kubectl
+        run: |
+          kubectl version --client
+          kubectl config current-context || true
+          kubectl get ns || true
+
 
       - name: Helm upgrade/install
         run: |
